Removing fixed position and z-index in filterBox class

--- a/src/styles/AreaFilterStyle.module.css
+++ b/src/styles/AreaFilterStyle.module.css
@@ -4,10 +4,9 @@
   height: 3rem;
   align-items: center;
   justify-content: space-evenly;
-  position: relative;
+  position: fixed;
   top: 4.8rem;
   color: #fff;
-  z-index: -10;
 }
 
 .menuTitle {
